# snowdragon

./: .gitignore  LICENSE  LICENSE-CC4.0-BY-NC-SA  LICENSE.md  README.md  data_preprocessing.py  predict.py  pyproject.toml  requirements-2024.txt  requirements.txt  run.sh  runner.py  setup.py
archive/: setup.py
configs/: README.md  main_config.yaml
configs/colors/: colors.yaml
configs/graintypes/: graintypes.yaml
configs/names/: names.yaml
configs/plots/: plots.yaml
configs/preprocessing/: preprocessing.yaml
configs/smp_devices/: smp_devices.yaml
configs/tsne/: tsne.yaml
configs/visualize/: visualize.yaml
data_handling/: clustering.py  data_generators.py  data_loader.py  data_parameters.py  data_preprocessing.py
models/: anns.py  attention_decoder.py  baseline.py  clustering.py  cv_handler.py  evaluation.py  helper_funcs.py  metrics.py  run_models.py  semisupervised_models.py  supervised_models.py  visualization.py  visualization_data.py  visualization_results.py
output/data_preprocessed/: anova.txt
output/evaluation/: .gitignore
output/plots_data/: .gitignore
output/scores/: acc_labels.csv  acc_labels_latex.txt  acc_labels_psql.txt  all_scores.csv  all_scores_latex.txt  all_scores_psql.txt  prec_labels.csv  prec_labels_latex.txt  prec_labels_psql.txt
output/storage/: smp_Balanced Random Forest_S31H0201.pickle  smp_Balanced Random Forest_S31H0231.pickle  smp_Balanced Random Forest_S31H0234.pickle  smp_Balanced Random Forest_S31H0470.pickle  smp_Balanced Random Forest_S31H0487.pickle  smp_Balanced Random Forest_S31H0488.pickle  smp_Balanced Random Forest_S31H0564.pickle  smp_Balanced Random Forest_S31H0565.pickle  smp_Balanced Random Forest_S31H0571.pickle  smp_Balanced Random Forest_S49M1361.pickle  smp_Balanced Random Forest_S49M1697.pickle  smp_Balanced Random Forest_S49M1715.pickle  smp_Balanced Random Forest_S49M1732.pickle  smp_Balanced Random Forest_S49M1917.pickle  smp_Balanced Random Forest_S49M1918.pickle  smp_Balanced Random Forest_S49M2050.pickle  smp_Balanced Random Forest_S49M2090.pickle  (+87 more)
plots/: table_results.odt  tree_extractor
scripts/: extract_tsne_cluster_distance.ipynb  extract_tsne_cluster_distance.py  run.py  run_process_profiles.py
snowdragon/: __init__.py  handler.py
src/: predict.py  run.py
stored_models/: baseline.model  blstm.hdf5  bmm.model  gmm.model  kmeans.model  lstm.hdf5  svm.model
tuning/: eval_tuning.py  tune_models.sh  tuning.py  tuning_parameters.py
visualization/: plot_data.py  plot_dim_reduction.py  plot_profile.py  plot_results.py  run_visualization.py
(+392 files in other folders)
